dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: adarshjain428/ptmbackend:v2
        ports:
        - containerPort: 3500
        livenessProbe:
          httpGet:
            path: /health
            port: 3500
          initialDelaySeconds: 30

        readinessProbe:
          httpGet:
            path: /ready
            port: 3500
          initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  selector:
    app: backend
  ports:
  - port: 3500
