dev/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: prod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ptm.adarsh-jain-ecom.infinityfreeapp.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: prod
spec:
  gateways:
  - prod-gateway
  hosts:
  - ptm.adarsh-jain-ecom.infinityfreeapp.com
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
